--- a/website/lectures/lecture16.qmd
+++ b/website/lectures/lecture16.qmd
@@ -9,7 +9,7 @@ execute:
 
 The NFL Draft is an annual meeting in which American football teams select newly eligible players.
 Prior to the NFL Draft, which is typically held in April, many fans and media analysts create *mock drafts*, in which they attempt to predict the order of players selected in the actual draft[^mockhistory].
-Whiel they initially served primarily as entertainment in the off-season, there is now a whole cottage industry of draft experts and analysts who regularly publish mock drafts in the lead up to the NFL Draft.
+While they initially served primarily as entertainment in the off-season, there is now a whole cottage industry of draft experts and analysts who regularly publish mock drafts in the lead up to the NFL Draft.
 These mock drafts can be used by fans to help calibrate expectations.
 They also are increasingly used by teams, who attempt to lean on the "wisdom of the crowd" to glean insight about the relative rankings of players and other teams' preferences.
 
@@ -43,7 +43,7 @@ In other words, although we will **not** assume that each rater fully ranks all 
 
 
 The **Plackett-Luce** model assumes that each rater *sequentially* generates their rankings.
-First, they select their top-rated item $i(1) out of the set of all items $\{1, 2, \ldots, p\}.$
+First, they select their top-rated item $i(1)$ out of the set of all items $\{1, 2, \ldots, p\}.$
 Then, conditionally on having selected the first item $i(1),$ they select their second-ranked item $i(2)$ from the set of remaining items $\{1, 2, \ldots, p\} \setminus \{i(1)\}$[^setminus].
 More generally, after selecting the top $k$ items $i(1), \ldots, i(k)$, rater $i$ selects their $(k+1)$-st ranked item from the set of currently available items $\{1, 2, \ldots, p\} \setminus \{i(1), \ldots, i(k)\}.$
 
@@ -74,7 +74,7 @@ So, all remaining parameter estimates should be interpretted as the *relative* d
 
 ### Example: Plackett-Luce with 3 items {#sec-three-item}
 
-As a concrete example, suppose we have three items $A$, $B$, and $C4 and two raters. 
+As a concrete example, suppose we have three items $A$, $B$, and $C$ and two raters. 
 Further suppose that Rater 1 ranks $A \succ B \succ C$ and Rater 2 only returns their top-ranked item, which is $C$. 
 According to the Plackett-Luce model, the probability of observing Rater 1's ranking $A \succ B \succ C$ can be decomposed as
 $$
@@ -154,7 +154,10 @@ fit <- PlackettLuce::PlackettLuce(rankings = R_rank)
 lambda_hat <- coef(fit)
 lambda_hat
 ```
-Based on these 
+
+<!--
+ Work out the selection probabilities
+-->
 
 
 ## Consensus Draft Rankings {#sec-draft}
