Add go.wisc link

--- a/website/slides/raw_slides/slides_16.qmd
+++ b/website/slides/raw_slides/slides_16.qmd
@@ -6,6 +6,7 @@ execute:
   cache: true
 ---
 
+
 ## Motivation: NFL Mock Drafts
 - Projection for which players taken in what order
 - Huge industry of fans & media releasing mock drafts regularly
@@ -227,7 +228,7 @@ cat("P(B selected second | A selected first) = ", round(pAB/pA, digits = 3), "\n
 ```
 ## NFL Mock Draft Data
 
-- CSV file `three_round_mock.csv` available on Box ([link](https://uwmadison.box.com/s/giqpnh2961djqzcfq1p1ib2orrbj8s0e))
+- CSV file `three_round_mock.csv` available on Box ([link](https://uwmadison.box.com/s/giqpnh2961djqzcfq1p1ib2orrbj8s0e)): [https://go.wisc.edu/7b7du4](https://go.wisc.edu/7b7du4)
 ```{r}
 #| label: read-mock-data
 #| eval: true
