--- a/website/slides/raw_slides/slides_16.qmd
+++ b/website/slides/raw_slides/slides_16.qmd
@@ -191,6 +191,8 @@ $$
 \end{align*}
 $$
 
+- Multiply these probabilities to get $\mathbb{P}(A \succ B \succ D \succ C)$
+
 ## Estimating $\mathbb{P}(A \succ B \succ D \succ C)$ II
 
 ```{r}
